--- a/app/src/main/res/layout/reaction_game_selection.xml
+++ b/app/src/main/res/layout/reaction_game_selection.xml
@@ -5,7 +5,7 @@
     android:id="@+id/gameSelectionBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#101010">
+    android:background="@color/DarkOrange">
 
     <Button
         android:id="@+id/reactionHard"
@@ -15,6 +15,9 @@
         android:layout_marginEnd="188dp"
         android:layout_marginBottom="88dp"
         android:text="Hard"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,6 +31,9 @@
         android:layout_marginTop="251dp"
         android:layout_marginBottom="88dp"
         android:text="Easy"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reactionHard"
         app:layout_constraintHorizontal_bias="0.134"
@@ -47,8 +53,9 @@
         android:text="Reaction Game"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -67,7 +74,7 @@
         android:text="Please pick a difficulty!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white"
+        android:textColor="@color/MediumVioletRed"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
