--- a/app/src/main/res/layout/trail_making_game_selection.xml
+++ b/app/src/main/res/layout/trail_making_game_selection.xml
@@ -5,12 +5,12 @@
     android:id="@+id/gameSelectionBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#101010">
+    android:background="@color/DarkOrange">
 
     <TextView
         android:id="@+id/gameNameDisplay"
-        android:layout_width="259dp"
-        android:layout_height="49dp"
+        android:layout_width="541dp"
+        android:layout_height="70dp"
         android:layout_marginStart="280dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="280dp"
@@ -18,8 +18,9 @@
         android:text="@string/TMT"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -38,7 +39,7 @@
         android:text="Please pick a difficulty!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white"
+        android:textColor="@color/MediumVioletRed"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/TmtHard"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,12 +48,15 @@
 
     <Button
         android:id="@+id/TmtHard"
-        android:layout_width="120dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="65dp"
-        android:layout_marginEnd="120dp"
+        android:layout_width="156dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="60dp"
+        android:backgroundTint="@android:color/white"
         android:text="Hard"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/TmtMedium"
@@ -61,12 +65,15 @@
 
     <Button
         android:id="@+id/TmtEasy"
-        android:layout_width="115dp"
-        android:layout_height="75dp"
+        android:layout_width="158dp"
+        android:layout_height="71dp"
         android:layout_marginStart="120dp"
-        android:layout_marginEnd="65dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="60dp"
+        android:backgroundTint="@android:color/white"
         android:text="Easy"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/TmtMedium"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,12 +82,15 @@
 
     <Button
         android:id="@+id/TmtMedium"
-        android:layout_width="115dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="65dp"
-        android:layout_marginEnd="65dp"
+        android:layout_width="158dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="60dp"
+        android:backgroundTint="@android:color/white"
         android:text="Medium"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/TmtHard"
         app:layout_constraintStart_toEndOf="@+id/TmtEasy" />
