--- a/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
+++ b/app/src/main/res/layout-land/memory_game_difficulty_selector.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Black"
+    android:background="@color/DarkOrange"
     tools:ignore="MissingDefaultResource">
 
     <TextView
@@ -13,8 +13,9 @@
         android:layout_height="58dp"
         android:text="Memory Game"
         android:textAlignment="center"
-        android:textColor="@color/GhostWhite"
-        android:textSize="34sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -28,8 +29,8 @@
         android:layout_height="44dp"
         android:text="Select Difficulty"
         android:textAlignment="center"
-        android:textColor="@color/GhostWhite"
-        android:textSize="20sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,18 +40,24 @@
     <Button
         android:id="@+id/hardButton"
         android:layout_width="177dp"
-        android:layout_height="62dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="100dp"
+        android:backgroundTint="@android:color/white"
         android:text="Hard"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/easyButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/easyButton"
         android:layout_width="177dp"
-        android:layout_height="62dp"
+        android:layout_height="70dp"
         android:layout_marginStart="112dp"
+        android:backgroundTint="@android:color/white"
         android:text="Easy"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
