--- a/app/src/main/res/layout-port/memory_game_difficulty_selector.xml
+++ b/app/src/main/res/layout-port/memory_game_difficulty_selector.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/GhostWhite">
+    android:background="@color/DarkOrange">
 
     <TextView
         android:id="@+id/memoryGameTitle"
@@ -12,8 +12,9 @@
         android:layout_height="58dp"
         android:text="Memory Game"
         android:textAlignment="center"
-        android:textColor="@color/Black"
-        android:textSize="34sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -27,8 +28,8 @@
         android:layout_height="44dp"
         android:text="Select Difficulty"
         android:textAlignment="center"
-        android:textColor="@color/Black"
-        android:textSize="20sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,9 @@
 
             <Button
                 android:id="@+id/easyButton"
+                android:backgroundTint="@android:color/white"
+                android:textColor="#171616"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -62,6 +66,9 @@
 
             <Button
                 android:id="@+id/hardButton"
+                android:backgroundTint="@android:color/white"
+                android:textColor="#171616"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
