--- a/app/src/main/res/layout/activity_display_leader_board.xml
+++ b/app/src/main/res/layout/activity_display_leader_board.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/DarkOrange"
     tools:context=".DisplayLeaderBoard">
 
     <TextView
         android:id="@+id/textViewEasy"
         android:layout_width="135dp"
         android:layout_height="38dp"
-
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -26,8 +27,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="LeaderBoard: "
-        android:textColor="@color/white"
+        android:textColor="@color/MediumVioletRed"
         android:textSize="50dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/yourBestScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,58 +38,72 @@
 
     <TextView
         android:id="@+id/textViewMedium"
-        android:layout_width="134dp"
-        android:layout_height="37dp"
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/white"
+        android:layout_width="135dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewHard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewEasy"
+        app:layout_constraintVertical_bias="0.549" />
 
     <TextView
         android:id="@+id/textViewHard"
         android:layout_width="135dp"
         android:layout_height="38dp"
-
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/white"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="156dp"
+
+        android:background="@drawable/round"
         android:text="Easy"
-        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/round"
         android:text="Medium"
-        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewMedium"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.521" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.647" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="72dp"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/round"
         android:text="Hard"
-        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -96,8 +113,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your best"
-        android:textColor="#EDE5E5"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
@@ -107,10 +125,12 @@
 
     <TextView
         android:id="@+id/bestScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="139dp"
+        android:layout_height="47dp"
+        android:background="@drawable/round"
         android:text="TextView"
-        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewEasy"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,6 +152,7 @@
         android:text="Percentile"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/yourBestScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
