--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,62 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/DarkOrange"
     tools:context=".pages.LoginPage">
 
     <EditText
         android:id="@+id/editTextEmailAddress"
-        android:layout_width="263dp"
-        android:layout_height="40dp"
+        android:layout_width="279dp"
+        android:layout_height="50dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="112dp"
-        android:background="@android:color/background_light"
+        android:background="@drawable/round"
         android:ems="10"
         android:hint="Enter Email here..."
         android:inputType="textEmailAddress"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.277"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="264dp"
-        android:layout_height="44dp"
+        android:layout_width="277dp"
+        android:layout_height="50dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="112dp"
-        android:background="@android:color/background_light"
+        android:background="@drawable/round"
         android:ems="10"
         android:hint="Enter Password here..."
         android:inputType="textPassword"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.29"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="70dp"
         android:layout_marginStart="143dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="174dp"
+        android:backgroundTint="@android:color/white"
         android:text="Login"
+        android:textColor="#171616"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="172dp"
+        android:layout_height="56dp"
         android:layout_marginStart="116dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="145dp"
+        android:backgroundTint="@android:color/white"
         android:text="Register here"
+        android:textColor="#171616"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
@@ -70,6 +76,7 @@
         android:layout_height="69dp"
         android:layout_marginTop="128dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/banner_logo" />
