--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/DarkOrange"
     tools:context=".pages.HomePage">
 
     <Button
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
 
         android:text="@string/Leaderboard"
-        android:textColor="#FFFFFF"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.12"
@@ -25,8 +26,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.519"
@@ -41,6 +40,8 @@
         android:layout_width="168dp"
         android:layout_height="50dp"
         android:layout_marginStart="328dp"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         android:text="Health Tracker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +55,8 @@
         android:layout_width="140dp"
         android:layout_height="53dp"
         android:text="Reaction"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -66,6 +69,8 @@
         android:layout_width="135dp"
         android:layout_height="56dp"
         android:text="Memory"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +82,8 @@
         android:layout_width="199dp"
         android:layout_height="61dp"
         android:text="Trail Making Test"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +96,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="99dp"
         android:text="Logout"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.853"
@@ -102,6 +111,8 @@
         android:layout_height="48dp"
         android:layout_marginEnd="109dp"
         android:text="Help"
+        android:backgroundTint="@android:color/white"
+        android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.202"
