--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/DarkOrange"
+    android:textAlignment="center"
     tools:context=".pages.RegisterPage">
 
     <TextView
@@ -15,71 +16,77 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="174dp"
         android:text="Registration"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/MediumVioletRed"
         android:textSize="@android:dimen/app_icon_size"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="248dp"
+        android:layout_height="45dp"
         android:layout_marginStart="105dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="97dp"
-        android:background="@android:color/background_light"
-        android:hint = "Enter Name here..."
+        android:background="@drawable/round"
         android:ems="10"
+        android:hint="Enter Name here..."
+        android:textAlignment="center"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/editTextAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="248dp"
+        android:layout_height="45dp"
         android:layout_marginStart="105dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="97dp"
-        android:background="@android:color/background_light"
+        android:background="@drawable/round"
         android:ems="10"
         android:hint="Enter Age here..."
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
 
     <EditText
         android:id="@+id/editTextEmailAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="101dp"
-        android:background="@android:color/background_light"
+        android:layout_width="248dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="97dp"
+        android:background="@drawable/round"
         android:ems="10"
         android:hint="Enter Email here..."
+        android:textAlignment="center"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAge" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="101dp"
-        android:background="@android:color/background_light"
+        android:layout_width="248dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="97dp"
+        android:background="@drawable/round"
         android:ems="10"
         android:hint="Enter Password here..."
+        android:textAlignment="center"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
 
@@ -88,27 +95,27 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent = "true"
+        android:layout_centerInParent="true"
         android:visibility="gone"
-        tools:ignore = "MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="152dp"
+        android:layout_height="66dp"
         android:layout_marginStart="158dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="159dp"
+        android:backgroundTint="@android:color/white"
         android:text="Register"
+        android:textColor="#171616"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
