--- a/app/src/main/res/layout/circles.xml
+++ b/app/src/main/res/layout/circles.xml
@@ -5,7 +5,7 @@
     android:id="@+id/circles_bckgrd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#101010">
+    android:background="@color/DarkOrange">
 
 
     <ImageView
@@ -13,7 +13,7 @@
         android:layout_width="736dp"
         android:layout_height="412dp"
         android:alpha="1"
-        android:background="#101010"
+        android:background="@color/DarkOrange"
         android:orientation="vertical"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -206,31 +206,40 @@
 
     <Button
         android:id="@+id/exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="114dp"
+        android:layout_height="69dp"
         android:layout_marginEnd="464dp"
         android:layout_marginBottom="88dp"
+        android:backgroundTint="@android:color/white"
         android:text="@string/Exit"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/retry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="114dp"
+        android:layout_height="69dp"
         android:layout_marginEnd="164dp"
         android:layout_marginBottom="88dp"
+        android:backgroundTint="@android:color/white"
         android:text="@string/Retry"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="388dp"
+        android:layout_width="107dp"
+        android:layout_height="62dp"
+        android:layout_marginEnd="312dp"
         android:layout_marginBottom="112dp"
+        android:backgroundTint="@android:color/white"
         android:text="play"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -238,11 +247,11 @@
         android:id="@+id/playText"
         android:layout_width="367dp"
         android:layout_height="44dp"
-        android:layout_marginEnd="236dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="192dp"
+        android:layout_marginBottom="52dp"
         android:text="Click the play button to start"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:textColor="@color/MediumVioletRed"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -251,16 +260,17 @@
         android:id="@+id/headerText"
         android:layout_width="416dp"
         android:layout_height="63dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="260dp"
         android:text="Trail Making Test"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="34sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="48sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.761"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.146" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
