--- a/app/src/main/res/layout/reaction_game_page.xml
+++ b/app/src/main/res/layout/reaction_game_page.xml
@@ -5,10 +5,10 @@
     android:id="@+id/circles_bckgrd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#101010">
+    android:background="@color/DarkOrange">
 
 
-    <EditText
+    <TextView
         android:id="@+id/startPromptMsgTxt"
         android:layout_width="353dp"
         android:layout_height="46dp"
@@ -17,8 +17,8 @@
         android:inputType="textPersonName"
         android:text="@string/Start_prompt"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="@color/MediumVioletRed"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -76,12 +76,15 @@
 
     <Button
         android:id="@+id/exit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="111dp"
+        android:layout_height="65dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="300dp"
         android:layout_marginBottom="28dp"
+        android:backgroundTint="@android:color/white"
         android:text="@string/Exit"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/retry_button"
         app:layout_constraintHorizontal_bias="0.5"
@@ -92,13 +95,16 @@
 
     <Button
         android:id="@+id/retry_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="62dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="300dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="28dp"
+        android:backgroundTint="@android:color/white"
         android:text="@string/Retry"
+        android:textColor="#171616"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
