--- a/app/src/main/res/layout/circles.xml
+++ b/app/src/main/res/layout/circles.xml
@@ -5,7 +5,7 @@
     android:id="@+id/circles_bckgrd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkOrange">
+    android:background="@color/Background">
 
 
     <ImageView
@@ -13,7 +13,7 @@
         android:layout_width="736dp"
         android:layout_height="412dp"
         android:alpha="1"
-        android:background="@color/DarkOrange"
+        android:background="@color/Background"
         android:orientation="vertical"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -251,7 +251,7 @@
         android:layout_marginBottom="52dp"
         android:text="Click the play button to start"
         android:textAlignment="center"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -262,7 +262,7 @@
         android:layout_height="63dp"
         android:text="Trail Making Test"
         android:textAlignment="center"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
