--- a/app/src/main/res/layout/memory_help_page.xml
+++ b/app/src/main/res/layout/memory_help_page.xml
@@ -5,14 +5,14 @@
     android:id="@+id/circles_bckgrd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkOrange">
+    android:background="@color/Background">
 
     <ImageView
         android:id="@+id/background_canvas"
         android:layout_width="736dp"
         android:layout_height="412dp"
         android:alpha="1"
-        android:background="@color/DarkOrange"
+        android:background="@color/Background"
         android:orientation="vertical"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/header2"
         android:layout_width="627dp"
         android:layout_height="332dp"
-        android:background="@color/DarkOrange"
+        android:background="@color/Background"
         android:text="TextView"
         android:textColor="@color/black"
         android:textColorLink="#000000"
