--- a/app/src/main/res/layout-port/memory_game_difficulty_selector.xml
+++ b/app/src/main/res/layout-port/memory_game_difficulty_selector.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkOrange">
+    android:background="@color/Background"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:id="@+id/memoryGameTitle"
@@ -12,7 +13,7 @@
         android:layout_height="58dp"
         android:text="Memory Game"
         android:textAlignment="center"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +29,7 @@
         android:layout_height="44dp"
         android:text="Select Difficulty"
         android:textAlignment="center"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
