--- a/app/src/main/res/layout/activity_display_leader_board.xml
+++ b/app/src/main/res/layout/activity_display_leader_board.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkOrange"
+    android:background="@color/Background"
     tools:context=".DisplayLeaderBoard">
 
     <TextView
@@ -27,7 +27,6 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="LeaderBoard: "
-        android:textColor="@color/MediumVioletRed"
         android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/yourBestScore"
@@ -128,7 +127,6 @@
         android:layout_width="139dp"
         android:layout_height="47dp"
         android:background="@drawable/round"
-        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30sp"
