--- a/app/src/main/res/layout/trail_making_game_selection.xml
+++ b/app/src/main/res/layout/trail_making_game_selection.xml
@@ -5,7 +5,7 @@
     android:id="@+id/gameSelectionBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkOrange">
+    android:background="@color/Background">
 
     <TextView
         android:id="@+id/gameNameDisplay"
@@ -18,7 +18,7 @@
         android:text="@string/TMT"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         android:text="Please pick a difficulty!"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/MediumVioletRed"
+        android:textColor="@color/Black"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/TmtHard"
         app:layout_constraintEnd_toEndOf="parent"
