--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
         <color name="Pink">#FFC0CB</color>
         <color name="LightPink">#FFB6C1</color>
         <color name="Orange">#FFA500</color>
+        <color name= "Background">#f0944c</color>
         <color name="LightSalmon">#FFA07A</color>
         <color name="DarkOrange">#FF8C00</color>
         <color name="Coral">#FF7F50</color>
