--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -106,12 +106,12 @@
         app:layout_constraintVertical_bias="0.498" />
 
     <Button
-        android:id="@+id/helpButton"
+        android:id="@+id/faqButton"
         android:layout_width="79dp"
         android:layout_height="48dp"
         android:layout_marginEnd="109dp"
-        android:text="Help"
         android:backgroundTint="@android:color/white"
+        android:text="FAQ's"
         android:textColor="#171616"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
