--- a/app/src/main/res/layout/trail_making_game_selection.xml
+++ b/app/src/main/res/layout/trail_making_game_selection.xml
@@ -30,8 +30,8 @@
 
     <TextView
         android:id="@+id/Header"
-        android:layout_width="421dp"
-        android:layout_height="52dp"
+        android:layout_width="499dp"
+        android:layout_height="46dp"
         android:layout_marginStart="155dp"
         android:layout_marginTop="46dp"
         android:layout_marginEnd="155dp"
@@ -94,5 +94,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/TmtHard"
         app:layout_constraintStart_toEndOf="@+id/TmtEasy" />
+
+    <Button
+        android:id="@+id/tmtHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="Help"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
