--- a/app/src/main/res/layout/trail_making_game_selection.xml
+++ b/app/src/main/res/layout/trail_making_game_selection.xml
@@ -23,10 +23,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.11" />
+        app:layout_constraintVertical_bias="0.247" />
 
     <TextView
         android:id="@+id/Header"
@@ -36,7 +35,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="155dp"
         android:layout_marginBottom="80dp"
-        android:text="Please pick a difficulty!"
+        android:text="Select Difficulty"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/Black"
@@ -44,7 +43,8 @@
         app:layout_constraintBottom_toTopOf="@+id/TmtHard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameNameDisplay" />
+        app:layout_constraintTop_toBottomOf="@+id/gameNameDisplay"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/TmtHard"
